exports[`invalid(1): {\"nome\": \"x\"} 1`] = `

[Input]
  1 | {"nome": "x"}

`;

exports[`invalid(1): {\"nome\": \"x\"} 2`] = `

Message:
> 1 | {"nome": "x"}
    |  ^^^^^^ Unknown field \`nome\`. Did you mean \`name\`?

Suggestion 1/1: Rename the field to \`name\`.:
  1 | {"name": "x"}

`;

exports[`invalid(10): {\"repo\": \"user/repo\"} 1`] = `

[Input]
  1 | {"repo": "user/repo"}

`;

exports[`invalid(10): {\"repo\": \"user/repo\"} 2`] = `

Message:
> 1 | {"repo": "user/repo"}
    |  ^^^^^^ Unknown field \`repo\`. Did you mean \`repository\`?

Suggestion 1/1: Rename the field to \`repository\`.:
  1 | {"repository": "user/repo"}

`;

exports[`invalid(11): {\"autor\": \"Sindre\"} 1`] = `

[Input]
  1 | {"autor": "Sindre"}

`;

exports[`invalid(11): {\"autor\": \"Sindre\"} 2`] = `

Message:
> 1 | {"autor": "Sindre"}
    |  ^^^^^^^ Unknown field \`autor\`. Did you mean \`author\`?

Suggestion 1/1: Rename the field to \`author\`.:
  1 | {"author": "Sindre"}

`;

exports[`invalid(12): {\"dependencies\": {}, \"dependancies\": {}} 1`] = `

[Input]
  1 | {"dependencies": {}, "dependancies": {}}

`;

exports[`invalid(12): {\"dependencies\": {}, \"dependancies\": {}} 2`] = `

Message:
> 1 | {"dependencies": {}, "dependancies": {}}
    |                      ^^^^^^^^^^^^^^ Unknown field \`dependancies\`. Did you mean \`dependencies\`?

`;

exports[`invalid(2): {\"bugz\": \"https://example.com\"} 1`] = `

[Input]
  1 | {"bugz": "https://example.com"}

`;

exports[`invalid(2): {\"bugz\": \"https://example.com\"} 2`] = `

Message:
> 1 | {"bugz": "https://example.com"}
    |  ^^^^^^ Unknown field \`bugz\`. Did you mean \`bugs\`?

Suggestion 1/1: Rename the field to \`bugs\`.:
  1 | {"bugs": "https://example.com"}

`;

exports[`invalid(3): {\"dependancies\": {}} 1`] = `

[Input]
  1 | {"dependancies": {}}

`;

exports[`invalid(3): {\"dependancies\": {}} 2`] = `

Message:
> 1 | {"dependancies": {}}
    |  ^^^^^^^^^^^^^^ Unknown field \`dependancies\`. Did you mean \`dependencies\`?

Suggestion 1/1: Rename the field to \`dependencies\`.:
  1 | {"dependencies": {}}

`;

exports[`invalid(4): {\"devDependences\": {}} 1`] = `

[Input]
  1 | {"devDependences": {}}

`;

exports[`invalid(4): {\"devDependences\": {}} 2`] = `

Message:
> 1 | {"devDependences": {}}
    |  ^^^^^^^^^^^^^^^^ Unknown field \`devDependences\`. Did you mean \`devDependencies\`?

Suggestion 1/1: Rename the field to \`devDependencies\`.:
  1 | {"devDependencies": {}}

`;

exports[`invalid(5): {\"dev-dependencies\": {}} 1`] = `

[Input]
  1 | {"dev-dependencies": {}}

`;

exports[`invalid(5): {\"dev-dependencies\": {}} 2`] = `

Message:
> 1 | {"dev-dependencies": {}}
    |  ^^^^^^^^^^^^^^^^^^ Unknown field \`dev-dependencies\`. Did you mean \`devDependencies\`?

Suggestion 1/1: Rename the field to \`devDependencies\`.:
  1 | {"devDependencies": {}}

`;

exports[`invalid(6): {\"hompage\": \"https://example.com\"} 1`] = `

[Input]
  1 | {"hompage": "https://example.com"}

`;

exports[`invalid(6): {\"hompage\": \"https://example.com\"} 2`] = `

Message:
> 1 | {"hompage": "https://example.com"}
    |  ^^^^^^^^^ Unknown field \`hompage\`. Did you mean \`homepage\`?

Suggestion 1/1: Rename the field to \`homepage\`.:
  1 | {"homepage": "https://example.com"}

`;

exports[`invalid(7): {\"hampage\": \"https://example.com\"} 1`] = `

[Input]
  1 | {"hampage": "https://example.com"}

`;

exports[`invalid(7): {\"hampage\": \"https://example.com\"} 2`] = `

Message:
> 1 | {"hampage": "https://example.com"}
    |  ^^^^^^^^^ Unknown field \`hampage\`. Did you mean \`homepage\`?

Suggestion 1/1: Rename the field to \`homepage\`.:
  1 | {"homepage": "https://example.com"}

`;

exports[`invalid(8): {\"script\": {}} 1`] = `

[Input]
  1 | {"script": {}}

`;

exports[`invalid(8): {\"script\": {}} 2`] = `

Message:
> 1 | {"script": {}}
    |  ^^^^^^^^ Unknown field \`script\`. Did you mean \`scripts\`?

Suggestion 1/1: Rename the field to \`scripts\`.:
  1 | {"scripts": {}}

`;

exports[`invalid(9): {\"sideEffect\": true} 1`] = `

[Input]
  1 | {"sideEffect": true}

`;

exports[`invalid(9): {\"sideEffect\": true} 2`] = `

Message:
> 1 | {"sideEffect": true}
    |  ^^^^^^^^^^^^ Unknown field \`sideEffect\`. Did you mean \`sideEffects\`?

Suggestion 1/1: Rename the field to \`sideEffects\`.:
  1 | {"sideEffects": true}

`;
